--- a/vignettes/primers.Rmd
+++ b/vignettes/primers.Rmd
@@ -9,6 +9,6 @@ vignette: >
 
 For a fungal ITS barcoding project (ITS5-ITS4), 15 primer plates were assembled
 using a dual-indexing strategy (see [primer_design](https://github.com/markschl/DadaNanoBC/tree/main/primer_design))
-and the corresponding [example report](primer-design-example.html).
+and the corresponding [example report](../primer-design-example.html).
 
 With the MinION, more plates could easily be pooled in one run ([Hebert et al., 2024](https://doi.org/10.1111/1755-0998.14028)).
